# logmunch

./: .gitignore  README.md
logmunch/: Cargo.toml  Makefile
logmunch/src/: file_list.rs  log_service.rs  main.rs  minute.rs  minute_db.rs  minute_id.rs  reader.rs  search_token.rs
test-http-echo/: README.md  index.js  package-lock.json  package.json
test-log-generator/: Dockerfile  Makefile  README.md  index.js  package.json
