[package]
name = "logmunch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
anyhow = "=1.0.81"
serde = { version = "1.0", features=["derive"]}
serde_json = "=1.0.115"
crossbeam = "=0.8.4"
futures = "=0.3.30"
# moka = { version = "0.12.5", features = ["futures"] }
rusqlite = { version = "0.31.0", features = ["bundled", "blob"]}
fxhash = "0.2.1"
growable-bloom-filter = "2.1.0"
postcard = {version = "=1.0.8", features = ["alloc"]}
walkdir = "=2.5.0"